feat: update statistic page
