# green-store/app/lib/api/models/customer-login-request.ts
@@ -14,14 +14,8 @@
 
 
 
-export * from './apis/auth-api';
-export * from './apis/category-api';
-export * from './apis/customer-api';
-export * from './apis/inventory-api';
-export * from './apis/order-api';
-export * from './apis/payment-api';
-export * from './apis/product-api';
-export * from './apis/statistic-api';
-export * from './apis/supplier-api';
-export * from './apis/users-api';
+export interface CustomerLoginRequest {
+    'email': string;
+    'password': string;
+}
 
