# green-store/app/lib/api/models/customer-register-request.ts
@@ -14,14 +14,11 @@
 
 
 
-export * from './apis/auth-api';
-export * from './apis/category-api';
-export * from './apis/customer-api';
-export * from './apis/inventory-api';
-export * from './apis/order-api';
-export * from './apis/payment-api';
-export * from './apis/product-api';
-export * from './apis/statistic-api';
-export * from './apis/supplier-api';
-export * from './apis/users-api';
+export interface CustomerRegisterRequest {
+    'name': string;
+    'phone'?: string | null;
+    'email'?: string | null;
+    'address'?: string | null;
+    'password'?: string | null;
+}
 
