# green-store/app/lib/api/models/index.ts
@@ -2,6 +2,8 @@ export * from './auth-response-dto';
 export * from './category-request';
 export * from './category-response';
 export * from './customer-create-request';
+export * from './customer-login-request';
+export * from './customer-register-request';
 export * from './customer-response';
 export * from './inventory-request';
 export * from './inventory-response';
@@ -25,9 +27,12 @@ export * from './payment-response';
 export * from './product-response';
 export * from './response-auth-response-dto';
 export * from './response-category-response';
+export * from './response-customer-register-request';
 export * from './response-customer-response';
 export * from './response-ienumerable-customer-response';
 export * from './response-ienumerable-inventory-response';
+export * from './response-ienumerable-revenue-response';
+export * from './response-ienumerable-top-seller-product-response';
 export * from './response-inventory-response';
 export * from './response-object';
 export * from './response-order-redirect-response';
@@ -43,8 +48,10 @@ export * from './response-payment-response';
 export * from './response-product-response';
 export * from './response-supplier-response';
 export * from './response-user-response';
+export * from './revenue-response';
 export * from './supplier-dto';
 export * from './supplier-response';
+export * from './top-seller-product-response';
 export * from './user-create-request';
 export * from './user-response';
 export * from './user-update-request';
