# green-store/app/lib/api/models/top-seller-product-response.ts
@@ -14,14 +14,9 @@
 
 
 
-export * from './apis/auth-api';
-export * from './apis/category-api';
-export * from './apis/customer-api';
-export * from './apis/inventory-api';
-export * from './apis/order-api';
-export * from './apis/payment-api';
-export * from './apis/product-api';
-export * from './apis/statistic-api';
-export * from './apis/supplier-api';
-export * from './apis/users-api';
+export interface TopSellerProductResponse {
+    'productId'?: number;
+    'productName'?: string | null;
+    'totalSold'?: number;
+}
 
